# src/main/resources/swagger.yaml
@@ -719,7 +719,11 @@ components:
       properties:
         id:
           type: integer
+        uri:
+          type: string
         type:
+          type: string
+        codeType:
           type: string
         number:
           type: integer
@@ -727,9 +731,57 @@ components:
           type: integer
         summary:
           type: string
+        detailedSummary:
+          type: string
         presentationDate:
           type: string
           format: date
+        statusDateTime:
+          type: string
+        statusLastReporterUri:
+          type: string
+        statusTramitationDescription:
+          type: string
+        statusTramitationTypeCode:
+          type: string
+        statusSituationDescription:
+          type: string
+        statusSituationCode:
+          type: string
+        statusDispatch:
+          type: string
+        statusUrl:
+          type: string
+        statusScope:
+          type: string
+        statusAppreciation:
+          type: string
+        uriOrgaoNumerador:
+          type: string
+        uriAutores:
+          type: string
+        typeDescription:
+          type: string
+        keywords:
+          type: string
+        uriPropPrincipal:
+          type: string
+        uriPropAnterior:
+          type: string
+        uriPropPosterior:
+          type: string
+        urlInteiroTeor:
+          type: string
+        urnFinal:
+          type: string
+        text:
+          type: string
+        justification:
+          type: string
+        createdAt:
+          type: string
+        updatedAt:
+          type: string
         status:
           type: object
 
